Upgrading project usage of JavaFX and Java SDK to 25